# untitled_meat_game

./: CMakeLists.txt
src/: Globals.hpp  UI.cpp  UI.hpp  main.cpp  references.cpp  references.hpp
src/data/: mesh.hpp  movement.hpp  position.hpp  shader.cpp  texture.cpp
src/headers/objects/primitives/: Mesh.hpp
src/objects/: Mesh.hpp  entity.cpp  entity.hpp  mesh.cpp  mesh.hpp  position.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/objects/UI/: UI.hpp
src/objects/primitives/: Entity.hpp  Mesh.cpp  Mesh.hpp  Position.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/scene/: camera.hpp  entity.hpp
src/shaders/: main.fs  main.vs
